--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,4 @@ jpa.default.properties.hibernate.show_sql: true
 jpa.default.properties.hibernate.format_sql: true
 
 itau.account.url: 'http://localhost:9091'
+bcb.pix.url: 'http://localhost:8082'
