--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,17 @@ dependencies {
     implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
     implementation("org.mariadb.jdbc:mariadb-java-client:2.7.2")
 
+    //Tests
+    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testImplementation("io.micronaut.test:micronaut-test-junit5:2.3.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
+
+}
+
+// use JUnit 5 platform
+test {
+    useJUnitPlatform()
 }
 
 
